Added Data Transfer Object(DTO) and Mapper